Thu Apr 30 14:41:59 GMT 2015  Olly Betts <olly@survex.com>

	* backends/chert/chert_table.cc,backends/glass/glass_table.cc: Remove
	  duplicate includes of "omassert.h".

Thu Apr 30 14:41:31 GMT 2015  Olly Betts <olly@survex.com>

	* backends/glass/glass_freelist.cc: Add missing explicit include of
	  "omassert.h",

Thu Apr 30 14:38:06 GMT 2015  Olly Betts <olly@survex.com>

	* HACKING,backends/chert/chert_table.cc,
	  backends/chert/chert_version.cc,backends/glass/glass_table.cc,
	  common/omassert.h: Remove CompileTimeAssert() and just use
	  C++11's static_assert instead.

Thu Apr 30 14:28:10 GMT 2015  Olly Betts <olly@survex.com>

	* backends/glass/glass_freelist.cc: Drop conditionals for GCC >= 3.4
	  as we now require >= 4.4.

Thu Apr 30 14:26:13 GMT 2015  Olly Betts <olly@survex.com>

	* api/omdatabase.cc,include/xapian/queryparser.h,
	  tests/harness/backendmanager.h: Drop workarounds for ancient Sun
	  C++ compilers, as we now require a recent version for C++11 support.

Thu Apr 30 14:22:46 GMT 2015  Olly Betts <olly@survex.com>

	* INSTALL: IRIX is past EOL so drop information about IRIX make.

Thu Apr 30 14:22:10 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac: OS X >= 10.4 apparently supports symbol visibility, so
	  update comment.

Thu Apr 30 14:21:37 GMT 2015  Olly Betts <olly@survex.com>

	* common/unordered_map.h: No longer relevant now we require C++11.

Thu Apr 30 13:59:16 GMT 2015  Olly Betts <olly@survex.com>

	* HACKING,INSTALL,configure.ac,xapian-config.in: Require a C++
	  compiler - the minimum required GCC version is now probably GCC 4.4.

Thu Apr 30 13:48:54 GMT 2015  Olly Betts <olly@survex.com>

	* xapian-config.in: Remove superfluous comment left over from code
	  refactoring.

Thu Apr 30 13:47:30 GMT 2015  Olly Betts <olly@survex.com>

	* xapian-config.in: Fix the include directory reported by --swigflags
	  for an installed copy to include the "/xapian-1.3" component for
	  a development version.
