@@ -234,7 +234,7 @@ class test_driver {
 };
 
 /// Display the location at which a testcase occurred, with an explanation.
-#define TESTCASE_LOCN(a) __FILE__":"STRINGIZE(__LINE__)": "STRINGIZE(a)
+#define TESTCASE_LOCN(a) __FILE__ ":" STRINGIZE(__LINE__) ": " STRINGIZE(a)
 
 /** Test a condition, and display the test with an extra explanation if
  *  the condition fails.
@@ -249,7 +249,7 @@ class test_driver {
 
 /// Test for equality of two things.
 #define TEST_EQUAL(a, b) TEST_AND_EXPLAIN(((a) == (b)), \
-	"Expected '"STRINGIZE(a)"' and '"STRINGIZE(b)"' to be equal:" \
+	"Expected '" STRINGIZE(a) "' and '" STRINGIZE(b) "' to be equal:" \
 	" were " << (a) << " and " << (b))
 
 /** Test for equality of two strings.
@@ -258,7 +258,7 @@ class test_driver {
  *  be seen clearly.
  */
 #define TEST_STRINGS_EQUAL(a, b) TEST_AND_EXPLAIN(((a) == (b)), \
-	"Expected "STRINGIZE(a)" and "STRINGIZE(b)" to be equal, were:\n\"" \
+	"Expected " STRINGIZE(a) " and " STRINGIZE(b) " to be equal, were:\n\"" \
 	<< (a) << "\"\n\"" << (b) << '"')
 
 /// Helper function for TEST_EQUAL_DOUBLE macro.
@@ -266,17 +266,17 @@ extern bool TEST_EQUAL_DOUBLE_(double a, double b);
 
 /// Test two doubles for near equality.
 #define TEST_EQUAL_DOUBLE(a, b) TEST_AND_EXPLAIN(TEST_EQUAL_DOUBLE_((a), (b)), \
-	"Expected '"STRINGIZE(a)"' and '"STRINGIZE(b)"' to be (nearly) equal:" \
+	"Expected '" STRINGIZE(a) "' and '" STRINGIZE(b) "' to be (nearly) equal:" \
 	" were " << setprecision(DBL_DIG) << (a) << " and " << (b) << ")" << setprecision(6))
 
 /// Test two doubles for non-near-equality.
 #define TEST_NOT_EQUAL_DOUBLE(a, b) TEST_AND_EXPLAIN(!TEST_EQUAL_DOUBLE_((a), (b)), \
-	"Expected '"STRINGIZE(a)"' and '"STRINGIZE(b)"' not to be (nearly) equal:" \
+	"Expected '" STRINGIZE(a) "' and '" STRINGIZE(b) "' not to be (nearly) equal:" \
 	" were " << setprecision(DBL_DIG) << (a) << " and " << (b) << ")" << setprecision(6))
 
 /// Test for non-equality of two things.
 #define TEST_NOT_EQUAL(a, b) TEST_AND_EXPLAIN(((a) != (b)), \
-	"Expected '"STRINGIZE(a)"' and '"STRINGIZE(b)"' not to be equal:" \
+	"Expected '" STRINGIZE(a) "' and '" STRINGIZE(b) "' not to be equal:" \
 	" were " << (a) << " and " << (b))
 
 #define DEFINE_TESTCASE(S,COND) bool test_##S()
